src/lexer/snapshots/enderpy__lexer__lexer__tests__f-string-literals-9.snap
---
source: src/lexer/lexer.rs
description: "f'hello_{f'''{a}'''}'"
---
[
    Token {
        kind: FStringStart,
        value: Str(
            "f'",
        ),
        start: 0,
        end: 2,
    },
    Token {
        kind: FStringMiddle,
        value: Str(
            "hello_",
        ),
        start: 2,
        end: 8,
    },
    Token {
        kind: LeftBracket,
        value: None,
        start: 8,
        end: 9,
    },
    Token {
        kind: FStringStart,
        value: Str(
            "f'''",
        ),
        start: 9,
        end: 13,
    },
    Token {
        kind: LeftBracket,
        value: None,
        start: 13,
        end: 14,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 14,
        end: 15,
    },
    Token {
        kind: RightBracket,
        value: None,
        start: 15,
        end: 16,
    },
    Token {
        kind: FStringEnd,
        value: Str(
            "'''",
        ),
        start: 16,
        end: 19,
    },
]
