src/lexer/snapshots/enderpy__lexer__lexer__tests__identifiers-4.snap
---
source: src/lexer/lexer.rs
description: a_a_a
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a_a_a",
        ),
        start: 0,
        end: 5,
    },
]
