src/lexer/snapshots/enderpy__lexer__lexer__tests__indentation-1.snap
---
source: src/lexer/lexer.rs
description: "if True:\n    pass\nelse:\n    pass"
---
[
    Token {
        kind: If,
        value: None,
        start: 0,
        end: 2,
    },
    Token {
        kind: True,
        value: None,
        start: 3,
        end: 7,
    },
    Token {
        kind: Colon,
        value: None,
        start: 7,
        end: 8,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 8,
        end: 9,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 9,
        end: 13,
    },
    Token {
        kind: Pass,
        value: None,
        start: 13,
        end: 17,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 17,
        end: 18,
    },
    Token {
        kind: Dedent,
        value: Indent(
            1,
        ),
        start: 18,
        end: 18,
    },
    Token {
        kind: Else,
        value: None,
        start: 18,
        end: 22,
    },
    Token {
        kind: Colon,
        value: None,
        start: 22,
        end: 23,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 23,
        end: 24,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 24,
        end: 28,
    },
    Token {
        kind: Pass,
        value: None,
        start: 28,
        end: 32,
    },
]
