src/lexer/snapshots/enderpy__lexer__lexer__tests__numeric-binary-1.snap
---
source: src/lexer/lexer.rs
description: 0b1
---
[
    Token {
        kind: Binary,
        value: Number(
            "0b1",
        ),
        start: 0,
        end: 3,
    },
]
